--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div>
             <h1 class="title">Kaiser Cholo</h1>
         </div>
+        <button type="button" class="btn">test</button>
         <div class="padre-flex">
             <nav>
                 <ul class="menu">
