--- a/fotos.html
+++ b/fotos.html
@@ -50,13 +50,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-50" src="media/kaisercholo_1.jpg" alt="La Tangente" style="margin: auto;">
+            <img class="rounded mx-auto d-block w-50" src="media/kaisercholo_1.jpg" alt="La Tangente">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-50" src="media/kaisercholo_2.jpg" alt="CC Matienzo" style="margin: auto;">
+            <img class="rounded mx-auto d-block w-50" src="media/kaisercholo_2.jpg" alt="CC Matienzo">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-50" src="media/kaisercholo_3.jpg" alt="Club Plasma" style="margin: auto;">
+            <img class="rounded mx-auto d-block w-50" src="media/kaisercholo_3.jpg" alt="Club Plasma">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
