--- a/shows.html
+++ b/shows.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaiser Cholo</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_2.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
@@ -39,10 +43,18 @@
             </nav>
         </div>
         </header>
-        <hr class="dashed">
-        <p class="pBody">
-        Proximamente...
-    </p>
+    <hr class="dashed">
+    <h1 class="show__title">Proximos Shows</h1>
+    <div>
+        <div>
+            <p class="show__text">
+                30/7 Circe 22hs
+            </p>
+        </div>
+        <div>
+            <img src="media/kaisercholo_1.jpg" alt="Kaiser Cholo" class="show__img">
+        </div>
+    </div>
     <hr class="dashed">
     <footer>
         <p>
