--- a/shows.html
+++ b/shows.html
@@ -54,6 +54,9 @@
         <div>
             <img src="media/kaisercholo_1.jpg" alt="Kaiser Cholo" class="show__img">
         </div>
+        <div>
+            <a href="google.com" class="show__link">Compra tus entradas</a>
+        </div>
     </div>
     <hr class="dashed">
     <footer>
