--- a/shows.html
+++ b/shows.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Keywords" content="banda,argentina,rock,musica">
+    <meta name="Description" content="Pagina de mi banda de rock donde encontraras info y el nuevo material">
+
     <title>Kaiser Cholo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style_2.css">
