--- a/shows.html
+++ b/shows.html
@@ -58,7 +58,7 @@
             <img src="media/kaisercholo_1.jpg" alt="Kaiser Cholo" class="show__img">
         </div>
         <div>
-            <a href="google.com" class="show__link">Compra tus entradas</a>
+            <a href="http://www.google.com" class="show__link">Compra tus entradas</a>
         </div>
     </div>
     <hr class="dashed">
